# Shanimation-rs

./: .gitignore  Cargo.toml  README.md
.VSCodeCounter/2023-04-20_14-54-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
frames_testing/: FrameDict.txt  ffmpeg.txt
src/: encoding.rs  frame_dictionary.rs  lib.rs  main.rs  point.rs  renderable.rs  resolution_consts.rs  scene.rs
src/renderable/: closure_behaviour.rs  closure_renderable.rs  finite_state_machine.rs  mod.rs  renderable_image.rs  rendered_image.rs
src/tools/: keyframing.rs  mod.rs
src/tools/curves/: chainable_curves.rs  mod.rs  single_curves.rs
src/tools/movement/: keyframing.rs  mod.rs
