[package]
name = "shanimation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
error-stack = "0.3.1"
error-stack-derive = "0.1.0"
fast_inv_sqrt = "1.0.1"
ffmpeg-sidecar = "0.4.0"
image = "0.24.6"
imageproc = "0.23.0"
num-traits = "0.2.15"
openh264 = "0.4.0"
threadpool = "1.8.1"
